2009-10-29   Patrice Dumas  <dumas@centre-cired.fr>

	* configure.ac, test/*: split node names in test that lead to 
	long out files, to be able to use tar-ustar instead of tar-pax.

2009-10-26   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, T2h_l2h.pm, maintained_extra/tex4ht.init:
	call twice the extraction of html to have something ready for
	the special regions formatting and also allow to have modifications
	of the file like in mediawiki.init (report of tex_in_copying failing
	from Jean-Charles Malahieude).
	* Makefile.am, doc/Makefile.am: modify to be able to build
	texi2html as part of another package (in texinfo).
	* texi2html.init: handle right --prefix in info.

2009-10-20   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl, T2h_l2h.pm, maintained_extra/tex4ht.init: 
	split tex handling further, with html extraction done in 
	@command_handler_output such that it is possible to modify the
	resulting files after 'process' and before 'output'.
	Add newlines between TeX fragments.
	If L2H_SKIP is 0, cache is not used.
	* examples/mediawiki.init: use html2wiki between 'process' and 
	before 'output' to translate the html produced by tex4ht or 
	latex2html to wiki.

2009-10-19   Patrice Dumas  <dumas@centre-cired.fr>

	* formats/*.init: don't strip {} in @math in html, docbook and 
	xml, as agreed with Karl.

2009-10-16   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: @math is also in code_style.
	* texi2html.pl, texi2html.init, */*.init: 
	change in the normal_text function reference API, now there is an 
	input variable true if in @math. Same in thing_command and 
	simple_command.
	* examples/mediawiki.init: handle @image, @uref, @math, @kbd,
	@indicateurl, @abbr, footnotes.

2009-10-14   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, formats/*: add 'inline_attribute' 
	for an XML attribute that should be closed at paragraph end and 